--- a/man.html
+++ b/man.html
@@ -25,7 +25,7 @@
         <div class="subtit">
             <div>
                 <ul>
-                    <li><a href="./example-1.html">WHAT IS AIRMAX</a></li>
+                    <li><a href="./index.html">WHAT IS AIRMAX</a></li>
                     <li><a href="./man.html">MAN</a></li>
                     <li><a href="./woman.html">WOMAN</a></li>
                     <li><a href="./collection.html">COLLECTION</a></li>
