--- a/collection.html
+++ b/collection.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="navigation">
-            <h1><a href="./example-1.html"><img src="img/logo_nike.png" width="100" height="37" alt="BLUEBOX" /></a></h1>
+            <h1><a href="./index.html"><img src="img/logo_nike.png" width="100" height="37" alt="BLUEBOX" /></a></h1>
             <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
             
             <ul>
