--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
             <div class="navigation">
                     
-                    <h1><a href="#"><img src="img/logo_nike.png" width="100" height="37" alt="logo" /></a></h1>
+                    <h1><a href="./index.html"><img src="img/logo_nike.png" width="100" height="37" alt="logo" /></a></h1>
                     <form id="searchthis" action="/search" style="display:inline;" method="get">
                         <input id="namanyay-search-box" name="q" size="40" type="text" placeholder="Search"/>
                         
